feat: make game and restart game

--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -23,7 +23,9 @@
     <h1>Rock Paper Scissors</h1>
     <h2>
       Round <span class="round">0</span>
-      <span id="reset"><i class="fas fa-undo fa-xs"></i></span>
+      <span id="reset"
+        ><i onclick="clickResetButton()" class="fas fa-undo fa-xs"></i
+      ></span>
     </h2>
 
     <div class="flex-container">
