feat: Handle won, restart game and result modal

--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -62,6 +62,18 @@
 
     <h1 id="result"></h1>
 
+    <section class="modal">
+      <span class="close_modal">×</span>
+      <img class="love" src="img/love.png" alt="winning message" />
+      <h3 class="winningMessage">
+        Thanks for playing with me! <br />You
+        <span id="winORlose">win</span> the game in
+        <span id="roundsToEnd">5</span> rounds!
+      </h3>
+
+      <button class="modal_button">Play Again</button>
+    </section>
+    <div class="overlay"></div>
     <script src="app.js"></script>
   </body>
 </html>
