--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css?family=Rajdhani:400,700"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" href="./img/favicon.ico" />
     <link rel="stylesheet" media="screen" href="app.css" />
   </head>
 
@@ -43,7 +43,7 @@
 
     <div id="js-modal" class="modal">
       <section id="js-modal__wrapper" class="modal__wrapper">
-        <img class="image--center" src="img/love.png" alt="winning message" />
+        <img class="image--center" src="./img/love.png" alt="winning message" />
         <h3 id="js-modal__content" class="modal__content"></h3>
         <button id="js-modal__btn" class="button">Play Again</button>
       </section>
